--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -3,25 +3,34 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "@ponder/client": "^0.10.24",
+    "@ponder/react": "^0.10.24",
+    "@tanstack/react-query": "^5.75.2",
+    "connectkit": "^1.9.0",
+    "next": "15.3.1",
+    "ponder": "^0.10.23",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "next": "15.3.1"
+    "viem": "^2.28.2",
+    "wagmi": "^2.15.2"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@eslint/eslintrc": "^3",
+    "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4",
+    "@types/webpack": "^5.28.5",
     "eslint": "^9",
     "eslint-config-next": "15.3.1",
-    "@eslint/eslintrc": "^3"
+    "pino-pretty": "^13.0.0",
+    "tailwindcss": "^4",
+    "typescript": "^5"
   }
 }
