--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@lens-protocol/client": "canary",
     "@ponder/client": "^0.10.24",
     "@ponder/react": "^0.10.24",
     "@tanstack/react-query": "^5.75.2",
