--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -9,14 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@lens-chain/sdk": "^1.0.3",
+    "@lens-chain/storage-client": "^1.0.4",
     "@lens-protocol/client": "canary",
-    "@ponder/client": "^0.10.24",
+    "@lens-protocol/metadata": "^2.0.0",
+    "@lens-protocol/react": "canary",
     "@ponder/react": "^0.10.24",
     "@tanstack/react-query": "^5.75.2",
     "connectkit": "^1.9.0",
     "next": "15.3.1",
     "ponder": "^0.10.23",
-    "react": "^19.0.0",
+    "react": "^19.1.0",
     "react-dom": "^19.0.0",
     "viem": "^2.28.2",
     "wagmi": "^2.15.2"
