--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -14,6 +14,7 @@
     "@lens-protocol/client": "canary",
     "@lens-protocol/metadata": "^2.0.0",
     "@lens-protocol/react": "canary",
+    "@ponder/client": "^0.10.25",
     "@ponder/react": "^0.10.24",
     "@tanstack/react-query": "^5.75.2",
     "connectkit": "^1.9.0",
@@ -26,15 +27,16 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@types/webpack": "^5.28.5",
+    "autoprefixer": "^10.4.21",
     "eslint": "^9",
     "eslint-config-next": "15.3.1",
     "pino-pretty": "^13.0.0",
-    "tailwindcss": "^4",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^4.1.7",
     "typescript": "^5"
   }
 }
