--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "pnpm --filter ./packages/web --parallel dev",
+    "dev": "pnpm --parallel dev",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
